<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.jimdo.raupenzoo.schmetterlingsquiz.ImpressumActivity">

    <TextView
        android:id="@+id/impressumheader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="10"
        android:text="@string/impressumheader"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:text="@string/impressumheader" />
    android:text="TextView" />

    <TextView
        android:id="@+id/impressum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="40"
        android:text="@string/impressum"
        android:textAlignment="center"
        tools:text="@string/impressum" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="40"
        android:text="@string/copyright"
        android:textAlignment="center"
        tools:text="@string/copyright" />

    <TextView
        android:id="@+id/sounds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="40"
        android:text="@string/sounds"
        android:textAlignment="center"
        tools:text="@string/sounds" />

    <CheckBox
        android:id="@+id/soundcheckbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="40"
        android:text="Sounds aktivieren" />

    <Button
        android:id="@+id/impressumweiterbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="40dp"
        android:layout_weight="20"
        android:onClick="sendMessage"
        android:text="@string/impressumstartbutton"
        android:textAlignment="center" />

</LinearLayout>