<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.jimdo.raupenzoo.schmetterlingsquiz.ErgebnisActivity">

    <TextView
        android:id="@+id/ergebnisheader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="10"
        android:text="@string/ergebnisheader"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:text="@string/ergebnisheader" />

    <TextView
        android:id="@+id/ergebnistext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="40"
        android:text=""
        android:textAlignment="center"
        tools:text="" />


    <ImageView
        android:id="@+id/ergebnisbild"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="20"
        app:srcCompat="@drawable/stern1" />

    <Button
        android:id="@+id/ergebnisweiterbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="40dp"
        android:layout_weight="20"
        android:onClick="sendMessage"
        android:text="@string/ergebnisnochmalbutton"
        android:textAlignment="center" />

    <Button
        android:id="@+id/ergebnisbeendenbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="40dp"
        android:layout_weight="20"
        android:onClick="beenden"
        android:text="@string/ergebnisbeendenbutton"
        android:textAlignment="center" />

</LinearLayout>